--- a/.env.dusk.ci
+++ b/.env.dusk.ci
@@ -1,17 +1,20 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:DIxObnMSZ4c0qlP99pIBBU/3g+pJRsmD2RwY6v9RrlE=
+APP_KEY=base64:PUBiG5BwbGTYfL2sNzbcHoYHSquKaqOhXKocmbt3QUI=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://som.test:8000
 
 LOG_CHANNEL=stack
 
-DB_CONNECTION=mysql
-DB_HOST=mysql
-DB_PORT=3306
-DB_DATABASE=default
-DB_USERNAME=default
-DB_PASSWORD=secret
+DB_CONNECTION=sqlite
+DB_DATABASE=/__w/github-actions-test/github-actions-test/database/database.sqlite
+
+# DB_CONNECTION=mysql
+# DB_HOST=127.0.0.1
+# DB_PORT=3306
+# DB_DATABASE=default
+# DB_USERNAME=default
+# DB_PASSWORD=secret
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
