--- a/.env.dusk.testing
+++ b/.env.dusk.testing
@@ -6,15 +6,12 @@ APP_URL=http://som.test:8000
 
 LOG_CHANNEL=stack
 
-DB_CONNECTION=sqlite
-DB_DATABASE=/__w/github-actions-test/github-actions-test/database/database.sqlite
-
-# DB_CONNECTION=mysql
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=default
-# DB_USERNAME=default
-# DB_PASSWORD=secret
+DB_CONNECTION=mysql
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_DATABASE=default
+DB_USERNAME=default
+DB_PASSWORD=secret
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
